# src/main/java/br/com/reclamei/company/dataprovider/database/entity/HeadEntity.java
@@ -11,6 +11,12 @@ import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
 import lombok.Getter;
 import lombok.Setter;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
+
+import java.time.LocalDateTime;
+import java.util.UUID;
 
 @Getter
 @Setter
@@ -22,20 +28,29 @@ public class HeadEntity {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
+    @JdbcTypeCode(SqlTypes.VARCHAR)
+    @Column(name = "external_id", nullable = false)
+    private UUID externalId;
+
     @Column(name = "email", nullable = false)
     private String email;
 
-    @Column(name = "name", nullable = false)
+    @Column(name = "name")
     private String name;
 
-//    @Column(name = "login", nullable = false)
-//    private String login;
-//
-//    @Column(name = "password", nullable = false)
-//    private String password;
+    @Column(name = "is_admin", nullable = false)
+    private Boolean isAdmin;
 
-    @Column(name = "phone", nullable = false)
+    @Column(name = "phone")
     private String phone;
+
+    // TODO: Utilizar enum
+    @Column(name = "status", nullable = false)
+    private String status;
+
+    @CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private LocalDateTime createdAt;
 
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "company_id", nullable = false)
