# src/main/java/br/com/reclamei/company/entrypoint/api/facade/CompanyFacade.java
@@ -7,6 +7,8 @@ import br.com.reclamei.company.entrypoint.api.dto.CompanyUpdateRequest;
 import br.com.reclamei.company.entrypoint.api.mapper.CompanyApiMapper;
 import org.springframework.stereotype.Component;
 
+import java.util.UUID;
+
 @Component
 public record CompanyFacade(CompanyApiMapper mapper, CompanyUseCase useCase) {
 
@@ -17,7 +19,7 @@ public record CompanyFacade(CompanyApiMapper mapper, CompanyUseCase useCase) {
 
     public void update(final CompanyUpdateRequest request) {
         var domain = mapper.toDomain(request);
-        useCase.save(domain);
+        useCase.update(domain);
     }
 
     public CompanyResponse findById(final Long id) {
@@ -33,4 +35,7 @@ public record CompanyFacade(CompanyApiMapper mapper, CompanyUseCase useCase) {
         return mapper.toResponse(useCase.getCompanyDetailsByCnpj(cnpj));
     }
 
+    public CompanyResponse getCompanyByHeadExternalId(final UUID externalId) {
+        return mapper.toResponse(useCase.getCompanyByHeadExternalId(externalId));
+    }
 }
