# src/main/resources/swagger/swagger.yml
@@ -86,6 +86,91 @@ paths:
                                 "$ref": "#/components/schemas/ServiceTypeResponse"
                 '404':
                     description: Service type was not found
+    /heads:
+        post:
+            tags:
+                - heads
+            operationId: create
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/HeadCreateRequest"
+                required: true
+            responses:
+                '201':
+                    description: The head was created successfully
+                '400':
+                    description: Error creating the company
+        put:
+            tags:
+                - heads
+            operationId: update
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/HeadUpdateRequest"
+                required: true
+            responses:
+                '204':
+                    description: The head was update successfully
+                '400':
+                    description: Error updating the head
+        delete:
+            tags:
+                - companies
+            operationId: deleteById
+            parameters:
+                -   name: id
+                    in: path
+                    required: true
+                    schema:
+                        type: long
+            responses:
+                '204':
+                    description: Head was successfully deleted
+                '404':
+                    description: Head was not found
+    /heads/company/{companyId}:
+        get:
+            tags:
+                - heads
+            operationId: getAllHeadsByCompanyId
+            parameters:
+                -   name: companyId
+                    in: path
+                    required: true
+                    schema:
+                        type: long
+            responses:
+                '200':
+                    description: Heads was found
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    "$ref": "#/components/schemas/HeadResponse"
+                '404':
+                    description: Heads was not found
+    /heads/{externalId}/confirm:
+        patch:
+            tags:
+                - heads
+            operationId: confirmHead
+            parameters:
+                -   name: externalId
+                    in: path
+                    required: true
+                    schema:
+                        type: string
+                        format: uuid
+            responses:
+                '204':
+                    description: The head was update successfully
+                '400':
+                    description: Error updating the head
     /companies:
         post:
             tags:
@@ -116,7 +201,7 @@ paths:
                 '204':
                     description: The company was update successfully
                 '400':
-                    description: Error creating the company
+                    description: Error updating the company
         get:
             tags:
                 - companies
@@ -174,6 +259,29 @@ paths:
                     description: Company details was not found
                 '400':
                     description: Invalid CNPJ
+    /companies/head/external-id/{externalId}:
+        get:
+            tags:
+                - companies
+            operationId: getCompanyByHeadExternalId
+            parameters:
+                -   name: externalId
+                    in: path
+                    required: true
+                    schema:
+                        type: string
+                        format: uuid
+            responses:
+                '200':
+                    description: Company was found
+                    content:
+                        application/json:
+                            schema:
+                                "$ref": "#/components/schemas/CompanyResponse"
+                '404':
+                    description: Company details was not found
+                '400':
+                    description: Invalid external-id
     /locations:
         post:
             tags:
@@ -388,7 +496,6 @@ components:
             required:
                 - name
                 - phone
-                - sacPhone
                 - email
                 - cnpj
                 - description
@@ -423,6 +530,9 @@ components:
                     items:
                         type: object
                         properties:
+                            externalId:
+                                type: string
+                                format: uuid
                             name:
                                 type: string
                                 example: Harry Potter
@@ -438,15 +548,23 @@ components:
         CompanyUpdateRequest:
             required:
                 - id
-                - name
-                - description
             type: object
             properties:
                 id:
                     type: long
+                cnpj:
+                    type: string
+                    format: cnpj
+                    example: 90796535000103
                 name:
                     type: string
                     example: Harry Potter
+                email:
+                    type: string
+                    format: email
+                    example: email@gmail.com
+                site:
+                    type: string
                 phone:
                     maxLength: 11
                     minLength: 10
@@ -457,36 +575,9 @@ components:
                     minLength: 10
                     type: string
                     example: 11222223333
-                email:
-                    type: string
-                    format: email
-                    example: email@gmail.com
-                cnpj:
-                    type: string
-                    format: cnpj
-                    example: 90796535000103
                 description:
                     type: string
                     example: Harry Potter Description
-                heads:
-                    type: array
-                    items:
-                        type: object
-                        properties:
-                            id:
-                                type: long
-                            name:
-                                type: string
-                                example: Harry Potter
-                            email:
-                                type: string
-                                format: email
-                                example: email@gmail.com
-                            phone:
-                                maxLength: 11
-                                minLength: 10
-                                type: string
-                                example: 11222223333
         CompanyResponse:
             type: object
             properties:
@@ -495,6 +586,8 @@ components:
                 name:
                     type: string
                     example: Harry Potter
+                site:
+                    type: string
                 phone:
                     maxLength: 11
                     minLength: 10
@@ -523,6 +616,13 @@ components:
                         properties:
                             id:
                                 type: long
+                            companyId:
+                                type: long
+                            externalId:
+                                type: string
+                                format: uuid
+                            isAdmin:
+                                type: boolean
                             name:
                                 type: string
                                 example: Harry Potter
@@ -535,6 +635,90 @@ components:
                                 minLength: 10
                                 type: string
                                 example: 11222223333
+
+        HeadCreateRequest:
+            required:
+                - externalId
+                - companyId
+                - name
+                - email
+                - phone
+            type: object
+            properties:
+                companyId:
+                    type: long
+                externalId:
+                    type: string
+                    format: uuid
+                isAdmin:
+                    type: boolean
+                name:
+                    type: string
+                    example: Harry Potter
+                email:
+                    type: string
+                    format: email
+                    example: email@gmail.com
+                phone:
+                    maxLength: 11
+                    minLength: 10
+                    type: string
+                    example: 11222223333
+        HeadUpdateRequest:
+            required:
+                - id
+                - externalId
+                - companyId
+                - name
+                - email
+                - phone
+            type: object
+            properties:
+                id:
+                    type: long
+                companyId:
+                    type: long
+                externalId:
+                    type: string
+                    format: uuid
+                isAdmin:
+                    type: boolean
+                name:
+                    type: string
+                    example: Harry Potter
+                email:
+                    type: string
+                    format: email
+                    example: email@gmail.com
+                phone:
+                    maxLength: 11
+                    minLength: 10
+                    type: string
+                    example: 11222223333
+        HeadResponse:
+            type: object
+            properties:
+                id:
+                    type: long
+                companyId:
+                    type: long
+                externalId:
+                    type: string
+                    format: uuid
+                isAdmin:
+                    type: boolean
+                name:
+                    type: string
+                    example: Harry Potter
+                email:
+                    type: string
+                    format: email
+                    example: email@gmail.com
+                phone:
+                    maxLength: 11
+                    minLength: 10
+                    type: string
+                    example: 11222223333
 
         LocationCreateRequest:
             required:
